...
          title: 'Modal',
      });
  }

  render() {
    return (
      <ScrollView style={styles.container} testID="test_ProductList">
        <Row title={'Toggle Drawer'} onPress={this.toggleDrawer}/>
        <Row title={'Push Screen'} testID={'pushScreen'} onPress={this.pushScreen}/>
        {/*<Row title={'Push List Screen'} testID={'pushListScreen'} onPress={this.pushListScreen}/>*/}
        <Row title={'Custom TopBar'} onPress={this.pushCustomTopBarScreen}/>
        <Row title={'Custom Button'} onPress={this.pushCustomButtonScreen}/>
        <Row title={'Top Tabs Screen'} onPress={this.pushTopTabsScreen} platform={'android'}/>
...
